--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,13 @@
-Python = 3.10.7 
-opencv-python = 4.7.0.72
-PIL = 9.4.0
-scipy = 1.10.1
-numpy = 1.24.3
-matplotlib = 3.7.1
-openpyxl = 3.0.10
-pandas = 1.5.3
-tiffile = 2018.10.18
-colormath = 3.0.0
-ipympl = 0.9.3
+opencv-python == 4.7.0.72
+PIL == 9.4.0
+scipy == 1.10.1
+numpy == 1.24.3
+matplotlib == 3.7.0
+openpyxl == 3.0.10
+pandas == 1.5.0
+tifffile == 2023.2.28 
+colormath == 3.0.0
+ipympl == 0.9.3
+requests == 2.28.2
+
+Note: Developed using Python 3.10.7 
